<resources>
    <string name="app_name">Coin</string>
    <string name="welcome_to_coin_content_description">Welcome to Coin.</string>
    <string name="from_now_on_helper_text">From now on, you can count on us to help you track your finances.</string>
    <string name="ready_to_get_started_helper_text">Ready to get started?</string>
    <string name="start_button_label">Start</string>
    <string name="exit_onboarding_dialog_title">Exit Coin Onboarding?</string>
    <string name="exit_onboarding_dialog_message">If you exit Coin\'s onboarding steps now, we\'ll have to start from the beginning the next time you launch Coin.</string>
    <string name="exit_label">Exit</string>
    <string name="cancel_label">Cancel</string>
    <string name="register_description_heading">Let\'s get you a Coin account.\nDon\'t worry, it\'s completely free.</string>
    <string name="name_field_hint">Name</string>
    <string name="email_field_hint">Email</string>
    <string name="password_field_hint">Password</string>
    <string name="confirm_password_field_hint">Confirm password</string>
    <string name="register_button_label">Register</string>
    <string name="already_have_an_account_helper_register_page">Already have an account?</string>
    <string name="login_button_label">Login</string>
    <string name="input_validation_name">Input should be non-empty and shorter than 256 characters.</string>
    <string name="input_validation_email">Enter a valid e-mail address.</string>
    <string name="input_validation_password">Your password must be at least %1$d characters long.</string>
    <string name="input_validation_confirm_password">Your passwords don\'t match.</string>
    <string name="welcome_back_default_login">Welcome back!</string>
    <string name="login_helper">Login to continue to your dashboard.</string>
    <string name="no_account_helper_login">Don\'t have an account yet?</string>
    <string name="welcome_to_coin_no_name">Welcome to Coin!</string>
    <string name="welcome_to_coin_with_name">Welcome to Coin, %s!</string>
    <string name="setup_page_description">Next, we\'d like for you to tell us about the cash you have on-hand.</string>
    <string name="setup_page_tip">Tip: Only include cash and funds from checking and savings accounts, not credit cards.</string>
    <string name="lightbulb_content_description">lightbulb</string>
    <string name="finish_label">Finish</string>
    <string name="add_an_account_label">Add Money</string>
    <string name="bank_type_checking">Checking</string>
    <string name="bank_type_savings">Savings</string>
    <string name="bank_type_cash">Cash</string>
    <string name="bank_institution_label">Institution</string>
    <string name="bank_amount_label">Amount</string>
    <string name="add_bank_dialog_amount_tip">Specify an exact amount. For example: 562.36</string>
    <string name="input_validation_email_login">Enter the e-mail address associated with your Coin account.</string>
    <string name="input_validation_password_login">Enter your password.</string>
    <string name="logout_button_label">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_value_hint">0.00</string>
    <string name="currency_hint_usd">USD</string>
</resources>