<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/add_bank_dialog_chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:checkedChip="@id/checking_chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/checking_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_type_checking"
            style="@style/Widget.Coin.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/savings_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_type_savings"
            style="@style/Widget.Coin.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/cash_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_type_cash"
            style="@style/Widget.Coin.Chip.Choice"/>
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:id="@+id/institution_name_field_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bank_institution_label"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_bank_dialog_chip_group"
        app:startIconDrawable="@drawable/ic_baseline_account_balance_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/institution_name_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:importantForAutofill="no"
        android:id="@+id/setup_amount_field_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/bank_amount_label"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperText="@string/add_bank_dialog_amount_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/institution_name_field_layout"
        app:startIconDrawable="@drawable/ic_baseline_monetization_on_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setup_amount_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>